feat(merge): add virtual merge simulation and polish CLI output
This commit adds the virtual merge infrastructure for conflict prediction
and polishes several CLI commands to improve output consistency.

src/merge.rs (new):
Virtual merge infrastructure using libgit2:
- MergeSimulation struct: holds merge result with conflict list
- MergeConflict struct: path, kind, and ancestor/ours/theirs paths
- MergeConflictKind enum: Content, AddAdd, ModifyDelete, Rename, Unknown
- simulate_merge(): performs in-memory merge without touching worktree
- collect_conflicts(): extracts conflicts from merged index
- classify_conflict(): categorizes conflict by file presence patterns

This enables sv risk --simulate to detect true merge conflicts.

src/lib.rs:
- Added merge module export

src/git.rs:
- Refined error handling in Git operations
- Improved worktree path resolution

src/output.rs:
- Simplified CommandOutput to use generic data field
- Reduced boilerplate in output rendering
- Consistent section formatting

src/cli/init.rs:
- Enhanced output with more detailed summary
- Better JSON structure per sv.v1 schema
- Improved next steps suggestions

src/cli/take.rs:
- Polished conflict reporting with actionable suggestions
- Better JSON output with summary counts
- Consistent exit code handling (exit 3 for conflicts)

src/cli/commit.rs:
- Improved Change-Id handling in output
- Better error messages for protected path violations

.sv.toml:
- Minor config adjustments

.beads/issues.jsonl:
- Updated task status: sv-2pg.5 and sv-2pg.6 marked closed
  (init and take output polish completed)

Related: sv-2pg.5 (sv init output polish)
Related: sv-2pg.6 (sv take output polish)
Related: sv-wzk.1.1 (Virtual merge infrastructure)

--- a/.sv.toml
+++ b/.sv.toml
@@ -7,6 +7,8 @@ default = "unknown"
 default_strength = "cooperative"
 default_intent = "other"
 default_ttl = "2h"
+expiration_grace = "0s"
+require_note = true
 
 [leases.compat]
 allow_overlap_cooperative = true
@@ -14,4 +16,7 @@ require_flag_for_strong_overlap = true
 
 [protect]
 mode = "guard"
-paths = []
+paths = [
+    ".beads/**",
+    { pattern = "generated/**", mode = "warn" },
+]
