--- a/.tasks/tasks.snapshot.json
+++ b/.tasks/tasks.snapshot.json
@@ -1,11 +1,217 @@
 {
   "schema_version": "sv.tasks.v1",
-  "generated_at": "2026-01-12T07:24:26.672642Z",
+  "generated_at": "2026-01-12T15:28:39.458152Z",
   "tasks": [
+    {
+      "id": "01KERH1G85E4HJDTENYTW6EP6T",
+      "title": "Test task",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T07:17:03.878Z",
+      "updated_at": "2026-01-12T15:28:39.448435Z",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T15:28:39.448435Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVEFNJC7D7ETM7MFQ8RXY",
+      "title": "Test plan for TUI logic",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.373387Z",
+      "updated_at": "2026-01-12T14:32:17.182987Z",
+      "body": "Unit tests for filter, sort, selection preservation\nCache invalidation tests (width change, selection change)\nNo heavy e2e; note manual UI checks\nAcceptance: test plan doc + initial tests implemented",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T14:32:17.182987Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVEEPRPFT4F6JWRJM6YV1",
+      "title": "Docs update for task viewer",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.342726Z",
+      "updated_at": "2026-01-12T14:24:51.683205Z",
+      "body": "Add docs/task_viewer.md: UX, keymap, perf budgets, data sources\nUpdate docs/prd-tasks.md with TUI entry + v1/v2 scope\nUpdate docs/README.md index\nAcceptance: docs merged and linked",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T14:24:51.683205Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVEGJ1KADTKGWAX4X24SV",
+      "title": "v2 actions spec: start/close/comment",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.402425Z",
+      "updated_at": "2026-01-12T14:24:46.768187Z",
+      "body": "Read-only v1; v2 adds start/close/comment actions\nDesign: use existing TaskStore ops (no shelling)\nConfirm status transitions + actor handling\nAcceptance: v2 spec + safety prompts",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T14:24:46.768187Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVEDRDGK93Y6BMH2R4FMG",
+      "title": "Filter + status shortcuts behavior",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.312481Z",
+      "updated_at": "2026-01-12T14:22:04.235459Z",
+      "body": "Fuzzy filter over id + title; incremental search\nQuick status filters: o=open, p=in_progress, c=closed, a=all\nClear: esc; toggle: /; indicator row in header\nAcceptance: filtering spec + keymap integration",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T14:22:04.235459Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVECRHRY8GZV070YP3KQQ",
+      "title": "File watch + reload pipeline",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.280446Z",
+      "updated_at": "2026-01-12T14:20:49.884011Z",
+      "body": "Watch: .tasks/tasks.jsonl, .tasks/tasks.snapshot.json, .git/sv/tasks.*\nDebounce reload 150-300ms; coalesce bursts\nOn change: background reload -> UI message -> swap model\nHandle watch errors gracefully in status banner\nAcceptance: watch spec + error handling plan",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T14:20:49.884011Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVEBXJNQ9N0YS22QA42HR",
+      "title": "Renderer: list/detail + caching + virtualization",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.253253Z",
+      "updated_at": "2026-01-12T14:14:36.206930Z",
+      "body": "Render only visible list window + detail viewport\nCache list rows by (task_id, width, selected)\nCache detail body by (task_id, width)\nMarkdown render cached; fallback to wrapped text if perf fails\nAcceptance: renderer plan + cache invalidation rules",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T14:14:36.206930Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVEAYR81MYPMHH314VK5A",
+      "title": "Data loading + snapshot strategy",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.222262Z",
+      "updated_at": "2026-01-12T12:58:02.116968Z",
+      "body": "Priority: .git/sv/tasks.snapshot.json then .tasks/tasks.snapshot.json\nFallback: fold log only if no snapshot (with warning banner)\nSelection persistence: keep by task id on reload\nSort order: status rank -> updated_at desc -> id\nAcceptance: spec for data sources + selection rules + sort rules",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T12:58:02.116968Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVEA0MX2Z8TCECHSYMTD3",
+      "title": "TUI architecture + module layout",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.192411Z",
+      "updated_at": "2026-01-12T12:55:27.241416Z",
+      "body": "Stack: ratatui + crossterm + notify (debounced)\nModules: ui/model.rs, ui/view.rs, ui/input.rs, ui/style.rs, ui/cache.rs\nData flow: TaskStore -> view model -> render tree\nThreading: background loader + channel to UI loop\nAcceptance: architecture note + module boundaries + data structs",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T12:55:27.241416Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVE93SYPG9CZKK37E0HF9",
+      "title": "Perf plan + budgets for task TUI",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.163553Z",
+      "updated_at": "2026-01-12T12:55:27.212690Z",
+      "body": "Targets: cold start <150ms @1k tasks, <300ms @5k; keypress-to-frame <16ms; reload <50ms\nStrategy: retained caches + differential render + no idle ticks\nSnapshot-first load; avoid log fold on startup\nProfiling: SV_TASK_PROFILE=1 timing logs (load/parse/render)\nAcceptance: perf plan documented + profiling spec + risk list",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T12:55:27.212690Z",
+      "comments_count": 0
+    },
+    {
+      "id": "01KERWVE7ZJ8MT7SD7FDP3PKWF",
+      "title": "Spec v1 TUI UX + layout",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:43:28.127586Z",
+      "updated_at": "2026-01-12T12:55:27.179731Z",
+      "body": "Scope: fullscreen split view (list left, detail right) + narrow mode single pane\nKeymap: j/k, arrows, / filter, esc clear, q quit, r reload, ? help\nVisual hierarchy: status pill, id, title, workspace; metadata row in detail\nError states: empty, load error, watch error, no selection\nDeliverable: UX spec doc with wireframe sketches + keymap table\nAcceptance: doc reviewed, covers v1 read-only and v2 actions placeholder",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T12:55:27.179731Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-01kerv",
+      "title": "Document sv task in README and PRODUCT_SPECIFICATION",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:15:07.865969Z",
+      "updated_at": "2026-01-12T11:17:56.408985Z",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T11:17:56.408985Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-01ker",
+      "title": "Add task list filters (workspace/actor/updated-since)",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:15:01.730902Z",
+      "updated_at": "2026-01-12T11:17:52.449254Z",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T11:17:52.449254Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-01ke",
+      "title": "Surface tasks in sv status",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:14:55.405497Z",
+      "updated_at": "2026-01-12T11:17:48.381271Z",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T11:17:48.381271Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-01k",
+      "title": "Emit task events in --events stream",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-12T10:14:48.310141Z",
+      "updated_at": "2026-01-12T11:17:44.184166Z",
+      "workspace_id": "2714a0f6-f5bf-4127-b645-6eb1dc42b7a4",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-12T11:17:44.184166Z",
+      "comments_count": 0
+    },
     {
       "id": "01KERHAHGYAXBTVD5Z0HT2DXF2",
       "title": "Do something",
       "status": "closed",
+      "priority": "P2",
       "created_at": "2026-01-12T07:22:00.094296Z",
       "updated_at": "2026-01-12T07:24:26.663787Z",
       "workspace_id": "d6b3a870-66bf-4110-b923-636275346fb5",
@@ -13,14 +219,6 @@
       "branch": "sv/ws/my-ws",
       "started_at": "2026-01-12T07:22:23.392226Z",
       "closed_at": "2026-01-12T07:24:26.663787Z",
-      "comments_count": 0
-    },
-    {
-      "id": "01KERH1G85E4HJDTENYTW6EP6T",
-      "title": "Test task",
-      "status": "open",
-      "created_at": "2026-01-12T07:17:03.878Z",
-      "updated_at": "2026-01-12T07:17:03.878Z",
       "comments_count": 0
     }
   ]
