Improve task viewer inline editor

--- a/.tasks/tasks.snapshot.json
+++ b/.tasks/tasks.snapshot.json
@@ -1,7 +1,156 @@
 {
   "schema_version": "sv.tasks.v1",
-  "generated_at": "2026-01-28T13:32:56.356640Z",
+  "generated_at": "2026-01-28T14:52:14.666687Z",
   "tasks": [
+    {
+      "id": "sv-p9f",
+      "title": "Inline editor improvements (epic)",
+      "status": "closed",
+      "priority": "P0",
+      "created_at": "2026-01-28T13:59:14.918532Z",
+      "updated_at": "2026-01-28T14:52:14.657103Z",
+      "body": "Epic to track inline editor UX improvements. Child tasks cover: inner-field key handling, priority select styling, parent lookup/autocomplete, rename Relates->Children behavior, remove relate note, rename Description->Body, and edit mode fields (sv-j5a).",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "closed_at": "2026-01-28T14:52:14.657103Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-26t",
+      "title": "List TUI: Change staus easily with 's'",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-28T14:12:20.658248Z",
+      "updated_at": "2026-01-28T14:52:00.805865Z",
+      "body": "In list normal mode, let 's' be a select for the statuses that the currently selected task can be set, and on 'enter' set that status for that task. 'esc' to escape/cancel\n",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:44.298163Z",
+      "closed_at": "2026-01-28T14:52:00.805865Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-mkf",
+      "title": "Inline editor: remove relate note",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-28T14:17:05.286696Z",
+      "updated_at": "2026-01-28T14:51:55.323905Z",
+      "body": "Remove the relate note field; it's likely unnecessary.",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:40.572048Z",
+      "closed_at": "2026-01-28T14:51:55.323905Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-j5a",
+      "title": "Add fields to edit mode",
+      "status": "closed",
+      "priority": "P1",
+      "created_at": "2026-01-28T14:04:33.298631Z",
+      "updated_at": "2026-01-28T14:51:49.948910Z",
+      "body": "Edit mode should have all fields as new tasks have, allowing us to add previously none existing relations and the like",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:36.765518Z",
+      "closed_at": "2026-01-28T14:51:49.948910Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-ykr",
+      "title": "Change list TUI commands",
+      "status": "closed",
+      "priority": "P1",
+      "created_at": "2026-01-28T14:02:05.231135Z",
+      "updated_at": "2026-01-28T14:51:45.850769Z",
+      "body": "instead of having all statuses filtered directly on a/o/i/c, allow us to tab inside the / filter and select status filter through there.",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:33.931054Z",
+      "closed_at": "2026-01-28T14:51:45.850769Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-zqc",
+      "title": "Inline editor: inner field key handling",
+      "status": "closed",
+      "priority": "P1",
+      "created_at": "2026-01-28T14:16:56.236651Z",
+      "updated_at": "2026-01-28T14:51:43.213831Z",
+      "body": "In inline editor, ignore other shortcuts while editing a field. Enter should switch into insert mode for the selected field. In insert mode, Enter or Tab returns to normal mode and selects the next field.",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:31.505222Z",
+      "closed_at": "2026-01-28T14:51:43.213831Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-tec",
+      "title": "Inline editor: priority field select",
+      "status": "closed",
+      "priority": "P1",
+      "created_at": "2026-01-28T14:16:58.638367Z",
+      "updated_at": "2026-01-28T14:51:40.055179Z",
+      "body": "Priority insert mode should open a select similar to 'p' in list TUI. Choice text should use the same colors as in list TUI.",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:28.514724Z",
+      "closed_at": "2026-01-28T14:51:40.055179Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-apk",
+      "title": "Inline editor: parent field task lookup",
+      "status": "closed",
+      "priority": "P1",
+      "created_at": "2026-01-28T14:17:00.538846Z",
+      "updated_at": "2026-01-28T14:51:37.420670Z",
+      "body": "Parent field should list existing task IDs + titles with search/autocomplete.",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:24.624219Z",
+      "closed_at": "2026-01-28T14:51:37.420670Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-mtq",
+      "title": "Inline editor: rename Relates to Children",
+      "status": "closed",
+      "priority": "P1",
+      "created_at": "2026-01-28T14:17:02.948142Z",
+      "updated_at": "2026-01-28T14:51:33.502081Z",
+      "body": "Rename Relates to Children and, on create/edit, set selected tasks' parent to this task.",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:22.358964Z",
+      "closed_at": "2026-01-28T14:51:33.502081Z",
+      "comments_count": 0
+    },
+    {
+      "id": "sv-wcn",
+      "title": "Inline editor: rename Description to Body",
+      "status": "closed",
+      "priority": "P1",
+      "created_at": "2026-01-28T14:17:07.336032Z",
+      "updated_at": "2026-01-28T14:51:30.383406Z",
+      "body": "Rename Description to Body, place it second in the field list, and give it the same behavior as Title.",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:35:20.212325Z",
+      "closed_at": "2026-01-28T14:51:30.383406Z",
+      "comments_count": 0
+    },
     {
       "id": "sv-5xa",
       "title": "Epic: Additional TUI commands",
