--- a/.tasks/tasks.snapshot.json
+++ b/.tasks/tasks.snapshot.json
@@ -1,7 +1,22 @@
 {
   "schema_version": "sv.tasks.v1",
-  "generated_at": "2026-01-28T14:52:14.666687Z",
+  "generated_at": "2026-01-28T14:57:23.028466Z",
   "tasks": [
+    {
+      "id": "sv-ay8",
+      "title": "Fix parallel sv take lease creation JSON parse error",
+      "status": "closed",
+      "priority": "P2",
+      "created_at": "2026-01-28T14:55:19.130812Z",
+      "updated_at": "2026-01-28T14:57:23.018349Z",
+      "body": "concurrency_stress lease_creation_is_safe_under_parallel_calls fails with JSON trailing characters under concurrent sv take",
+      "workspace_id": "4365f497-2aae-41bb-9bb8-24b1daab916b",
+      "workspace": "sv",
+      "branch": "main",
+      "started_at": "2026-01-28T14:55:20.906354Z",
+      "closed_at": "2026-01-28T14:57:23.018349Z",
+      "comments_count": 0
+    },
     {
       "id": "sv-p9f",
       "title": "Inline editor improvements (epic)",
