--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,7 @@ jobs:
           mkdir -p dist
           cp target/${{ matrix.target }}/release/sv dist/
           tar -czf dist/sv-${{ matrix.target }}.tar.gz -C dist sv
+          rm dist/sv
 
       - name: Package (windows)
         if: runner.os == 'Windows'
@@ -54,6 +55,7 @@ jobs:
           New-Item -ItemType Directory -Force -Path dist | Out-Null
           Copy-Item target/${{ matrix.target }}/release/sv.exe dist/
           Compress-Archive -Path dist/sv.exe -DestinationPath ("dist/sv-${{ matrix.target }}.zip") -Force
+          Remove-Item -Force dist/sv.exe
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
